Unit testing to payment methods
