# routes/paymentMethods.js
@@ -7,7 +7,7 @@ const router = express.Router()
 
 router.get('/', paymentController.getAll)
 router.get('/:id', paymentController.getSingleById)
-router.get('/name/:method_name', paymentController.getSingleByName)
+router.get('/name/:card_number', paymentController.getSingleByCard)
 router.post('/', authenticate.isAuthenticated, validation.validatePaymentMethod, paymentController.createPaymentMethod)
 router.put('/:id', authenticate.isAuthenticated, validation.validatePaymentMethod, paymentController.updatePaymentMethod)
 router.delete('/:id', authenticate.isAuthenticated, paymentController.deletePaymentMethod)
